# qgf

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yaml
agents/: __init__.py  bc.py  bptt.py  cfgrl.py  common.py  dcgql.py  dsrl.py  edp.py  fawac.py  fbrac.py  fql.py  grad_step.py  ifql.py  iql.py  iql_diffusion.py  qam.py  qgf_backup.py  robust_q.py  sac.py
envs/: d4rl_utils.py  env_utils.py  ogbench_utils.py  robomimic_utils.py
envs/exorl/: dmc.py  exorl_utils.py
envs/exorl/custom_dmc_tasks/: __init__.py  cheetah.py  hopper.py  jaco.py  quadruped.py  walker.py
hyg_QA/: 00_INDEX.md  01_qgf_architecture.md  02_experiment_guide.md  03_paper_analysis_and_baselines.md  10_full_results.md
scripts/: bc_iql_train.py  eval_existing.sh  exp_cfgrl.py  exp_dac.py  exp_edp.py  exp_fql.py  exp_grad_step_test_time_eval.py  exp_qam.py  exp_qfql_test_time_eval.py  exp_qgf_jacobian_test_time_eval.py  exp_qgf_test_time_eval.py  exp_qgf_train_test.py  exp_qsm_bc.py  exp_robust_q.py  generate.py  run_env.sh
utils/: activation.py  datasets.py  diffusion.py  encoders.py  evaluation.py  flax_utils.py  log_utils.py  networks.py  wandb.py
