[project]
name = "qgf"
version = "0.0.0"
requires-python = ">=3.9"
dependencies = [
    "absl-py",
    "distrax",
    "dm-control",
    "dm-env",
    "flax",
    "gymnasium==0.29.1",
    "h5py",
    "imageio",
    "jax[cuda12]==0.4.30",
    "lxml",
    "ml-collections",
    "mujoco-py>=2.1.2.14",
    "numpy",
    "ogbench",
    "optax",
    "pillow",
    "scipy",
    "tqdm",
    "typing-extensions",
    "wandb",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.format]
quote-style = "single"
